--- a/style.css
+++ b/style.css
@@ -4,6 +4,19 @@ body{
     font: Roboto, Sans-serif;
 }
 
+ul{
+    margin: 0;
+    padding: 0;
+}
+
+li{
+    list-style-type: none;
+}
+
+a{
+    text-decoration: none;
+}
+
 .top{
     background-color: #1F2937;
     min-height: 80vh;
