--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
 body{
     margin: 0;
     padding: 0;
-    font: Roboto, Sans-serif;
+    font-family: Roboto, sans-serif;
+    color: #F9FAF8;
 }
 
 ul{
     margin: 0;
     padding: 0;
+    display: flex;
+    gap: 16px;
 }
 
 li{
@@ -15,22 +18,39 @@ li{
 
 a{
     text-decoration: none;
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+.header{
+    background-color: #1F2937;
+    min-height: 48px;
+    padding: 8px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.logo{
+    font-size: 24px;
+    font-weight: 900;
 }
 
 .top{
     background-color: #1F2937;
-    min-height: 80vh;
+    min-height: 72vh;
 }
 
 .info{
-    min-height: 60vh;
+    min-height: 64vh;
 }
 
 .quote{
     background-color: #E5E7EB;
-    min-height: 50vh;
+    min-height: 48vh;
 }
 
 .sign-up{
-    min-height: 40vh;
+    min-height: 32vh;
 }
