--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body{
     padding: 0;
     font-family: Roboto, sans-serif;
     color: #F9FAF8;
+    display: flex;
+    flex-direction: column;
 }
 
 ul{
@@ -24,12 +26,21 @@ a{
 
 .header{
     background-color: #1F2937;
+}
+
+.header .container{
     min-height: 48px;
     padding: 8px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 
+}
+
+.container{
+    border: 3px solid red;
+    margin-right: 48px;
+    margin-left: 48px;
 }
 
 .logo{
