--- a/style.css
+++ b/style.css
@@ -24,6 +24,16 @@ a{
     font-size: 18px;
 }
 
+button{
+    background-color: #3882F6;
+    border: none;
+    border-radius: 8px;
+    color: white;
+    padding: 8px 32px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
 .header{
     background-color: #1F2937;
 }
@@ -57,7 +67,7 @@ a{
 
 .top .container{
     display: flex;
-    gap: 32px;
+    gap: 48px;
     align-items: center;
     flex-wrap: wrap;
 }
@@ -79,7 +89,6 @@ a{
     font-size: 48px;
     font-weight: 900;
 }
-
 
 .info{
     min-height: 64vh;
